# larch2

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INPLACE-SPR.md  LICENSE  README.md  REVIEW_FIXES_PLAN.md  STYLE.md  docker-build.sh  format.sh
.github/workflows/: build.yml  release.yml
Testing/: compare_larch_versions.sh  comparison_report.md
Testing/data/fluC_M/: input.fa  root.fa  tree0.nwk  tree1.nwk  tree2.nwk  tree3.nwk  tree4.nwk
Testing/data/rotavirusA/: input.fa  root.fa  tree0.nwk  tree1.nwk  tree2.nwk  tree3.nwk  tree4.nwk
cmake/: CompileShaders.cmake  EmbedSpirv.cmake  version.hpp.in
data/20D_from_fasta/: refseq.txt
data/madag/: fluC_PB2_10taxa.pb  fluC_PB2_7taxa.pb
doc/: CHAIN.md  DAG.md  DRIFT-COMBINER.md  HASH_CHAIN.md  WRIC-SPR-SEARCH-BENCHMARK-RESULTS.md  WRIC-SPR-SEARCH-BENCHMARK.md  WRIC-SPR-SEARCH.md  WRIC_POLYTOMY_BENCHMARK.md
include/larch/: bigint.hpp  build_fasta_newick.hpp  chain.hpp  chart_bnb_trim_apply.hpp  chart_spr.hpp  chart_spr_search.hpp  chart_trim.hpp  checkpoint.hpp  clade_grammar.hpp  common.hpp  compact_genome.hpp  compute.hpp  dag.hpp  edge_label.hpp  edge_mutations.hpp  extend_dag.hpp  fasta.hpp  grammar_topology.hpp  hash_chain.hpp  indep_rs_cnn_model.hpp  inplace_spr.hpp  io_util.hpp  kmer_encoder.hpp  leaf_set.hpp  likelihood.hpp  likelihood_score_ops.hpp  load_parsimony.hpp  load_proto_dag.hpp  merge.hpp  ml_forward_result.hpp  model_variant.hpp  native_optimize.hpp  newick.hpp  nn_inference.hpp  node_label.hpp  nuc.hpp  overlay_dag.hpp  overlay_spr.hpp  parsimony_chart.hpp  phylo_dag.hpp  (+28 more)
proto/: checkpoint.proto  dag.proto  parsimony.proto
shaders/: cnn_r_branch.comp  cnn_s_branch.comp  fivemer_forward.comp
src/: chart_bnb_trim_apply.cpp  chart_spr_search.cpp  checkpoint.cpp  nn_inference.cpp  pickle_reader.cpp  protobuf.cpp  protobuf_encode.cpp  vulkan_compute.cpp
test/: bigint_test.cpp  build_fasta_newick_test.cpp  chain_test.cpp  chart_bnb_trim_apply_test.cpp  chart_spr_search_test.cpp  chart_spr_test.cpp  chart_trim_test.cpp  checkpoint_integration.sh  checkpoint_test.cpp  clade_grammar_test.cpp  dag_canonical_equal.cpp  dag_test.cpp  expect_fail_regex.sh  extend_dag_test.cpp  hash_chain_test.cpp  inplace_spr_test.cpp  iupac_correctness_test.cpp  kmer_encoder_test.cpp  larch2_bcr_non_treefile_suffix.sh  likelihood_test.cpp  merge_consistency_test.cpp  merge_test.cpp  native_optimize_test.cpp  nn_blended_spr_test.cpp  nn_cnn_test.cpp  nn_inference_test.cpp  nn_ml_spr_test.cpp  nn_s5f_test.cpp  no_direct_chart_spr_multisite_helpers.sh  no_direct_chart_spr_root_score_detail.sh  optimize_test.cpp  overlay_dag_test.cpp  parsimony_chart_test.cpp  phylo_test.cpp  plateau_test.cpp  polytomy_refinement_test.cpp  pth_loader_test.cpp  rank3_rewrite_test.cpp  rf_distance_test.cpp  rotaA_diagnostic_test.cpp  (+15 more)
test/shaders/: test_double_it.comp
tools/: dagutil.cpp  larch2-bcr.cpp  larch2.cpp  wric_polytomy_benchmark.sh  wric_spr_search_benchmark.sh
tools/mold-ld/: ld
